--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "zahradnictvi.cz-theme",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Error: no build command\""
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "zahradnictvi.cz-theme",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "scripts": {
+        "build": "vite build --emptyOutDir"
+    },
+    "author": "",
+    "license": "ISC",
+    "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
+    "dependencies": {
+        "@tailwindcss/vite": "^4.0.14",
+        "animate.css": "^4.1.1",
+        "aos": "^2.3.4",
+        "simple-parallax-js": "^6.0.1"
+    },
+    "devDependencies": {
+        "@types/aos": "^3.0.7",
+        "@types/jquery": "^3.5.32",
+        "@types/node": "^22.13.10",
+        "prettier": "^3.5.3",
+        "terser": "^5.39.0",
+        "typescript": "^5.8.2",
+        "vite": "^6.2.2"
+    }
 }
